# faceguard

./: .gitignore  CLAUDE.md  Cargo.toml  PERFORMANCE_AUDIT.md  PHASE7.md  PLAN.md  README.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/clean-architecture/: SKILL.md
.claude/skills/clean-code/: SKILL.md
.claude/skills/domain-driven-design/: SKILL.md
.github/workflows/: build.yml  ci.yml
cmake/: whisper-no-native.cmake
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/audio/domain/: audio_segment.rs  audio_transformer.rs  censor_region.rs  mod.rs  speech_recognizer.rs  transcript.rs  word_censor.rs
crates/core/src/audio/infrastructure/: formant_shift_transformer.rs  mod.rs  pitch_shift_transformer.rs  voice_morph_transformer.rs  whisper_recognizer.rs
crates/core/src/blurring/: README.md
crates/core/src/blurring/domain/: frame_blurrer.rs  mod.rs
crates/core/src/blurring/infrastructure/: blurrer_factory.rs  cpu_elliptical_blurrer.rs  cpu_rectangular_blurrer.rs  gaussian.rs  gpu_context.rs  gpu_elliptical_blurrer.rs  gpu_rectangular_blurrer.rs  mod.rs
crates/core/src/blurring/infrastructure/shaders/: gaussian_blur.wgsl
crates/core/src/detection/: README.md
crates/core/src/detection/domain/: face_detector.rs  face_grouper.rs  face_landmarks.rs  face_region_builder.rs  mod.rs  region_merger.rs  region_smoother.rs
crates/core/src/detection/infrastructure/: bytetrack_tracker.rs  cached_face_detector.rs  embedding_face_grouper.rs  execution_provider.rs  histogram_face_grouper.rs  math.rs  mod.rs  model_resolver.rs  onnx_blazeface_detector.rs  onnx_yolo_detector.rs  skip_frame_detector.rs
crates/core/src/pipeline/: README.md  blur_faces_use_case.rs  blur_image_use_case.rs  mod.rs  pipeline_executor.rs  pipeline_logger.rs  preview_faces_use_case.rs  process_audio_use_case.rs  region_filter.rs
crates/core/src/pipeline/infrastructure/: mod.rs  threaded_pipeline_executor.rs
crates/core/src/shared/: constants.rs  frame.rs  mod.rs  model_resolver.rs  region.rs  video_metadata.rs
crates/core/src/video/: README.md
crates/core/src/video/domain/: audio_reader.rs  audio_writer.rs  image_writer.rs  mod.rs  video_reader.rs  video_writer.rs
crates/core/src/video/infrastructure/: ffmpeg_audio_reader.rs  ffmpeg_audio_writer.rs  ffmpeg_reader.rs  ffmpeg_writer.rs  image_file_reader.rs  image_file_writer.rs  mod.rs
crates/desktop/: Cargo.toml  README.md  build_app.sh  sign_and_notarize.sh
crates/desktop/assets/: Info.plist  VideoBlur.icns
crates/desktop/src/: app.rs  main.rs  settings.rs  theme.rs
crates/desktop/src/platform/: macos.rs  mod.rs  windows.rs
crates/desktop/src/tabs/: about_tab.rs  accessibility_tab.rs  appearance_tab.rs  main_tab.rs  mod.rs  privacy_tab.rs  settings_tab.rs
crates/desktop/src/widgets/: dashed_container.rs  drop_zone.rs  face_card.rs  faces_well.rs  file_row.rs  mod.rs  primary_button.rs  secondary_button.rs
crates/desktop/src/workers/: blur_worker.rs  mod.rs  model_cache.rs  preview_worker.rs
crates/desktop/wix/: License.rtf  main.wxs
docs/plans/: 2026-02-26-audio-features-design.md  2026-02-26-audio-features-plan.md  2026-02-27-psola-voice-disguise-design.md  2026-02-27-psola-voice-disguise-plan.md  2026-02-27-whisper-integration-design.md  2026-02-27-whisper-integration-plan.md
