[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/desktop",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
faceguard-core = { path = "crates/core" }
ndarray = "0.17"
thiserror = "2"
rstest = "0.23"
approx = "0.5"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
image = "0.25"
ffmpeg-next = "7"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
iced = { version = "0.14", features = ["image", "tokio", "canvas", "advanced", "svg"] }
iced_anim = { version = "0.3", features = ["widgets"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
