[package]
name = "video-blur-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for face blurring in videos and images"

[[bin]]
name = "video-blur"
path = "src/main.rs"

[features]
static-ffmpeg = ["video-blur-core/static-ffmpeg"]

[dependencies]
video-blur-core = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
