[package]
name = "faceguard-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for face blurring in videos and images"

[[bin]]
name = "faceguard"
path = "src/main.rs"

[features]
static-ffmpeg = ["faceguard-core/static-ffmpeg"]

[dependencies]
faceguard-core = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
