[package]
name = "faceguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core face detection and blurring library"

[dependencies]
ndarray = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
image = { workspace = true }
ffmpeg-next = { workspace = true }
crossbeam-channel = { workspace = true }
ort = { workspace = true }

[features]
static-ffmpeg = ["ffmpeg-next/build", "ffmpeg-next/build-lib-x264", "ffmpeg-next/build-license-gpl"]

[dev-dependencies]
rstest = { workspace = true }
approx = { workspace = true }
tempfile = { workspace = true }
