[package]
name = "faceguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core face detection and blurring library"

[dependencies]
ndarray = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
image = { workspace = true }
ffmpeg-next = { workspace = true }
crossbeam-channel = { workspace = true }
rustfft = "6"

[features]
static-ffmpeg = ["ffmpeg-next/build", "ffmpeg-next/build-lib-x264", "ffmpeg-next/build-license-gpl"]

[dev-dependencies]
rstest = { workspace = true }
approx = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray", "directml"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
