[package]
name = "video-blur-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop GUI for face blurring in videos and images"

[[bin]]
name = "video-blur-desktop"
path = "src/main.rs"

[dependencies]
video-blur-core = { workspace = true }
iced = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
crossbeam-channel = { workspace = true }
image = { workspace = true }
