[package]
name = "faceguard-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop GUI for face blurring in videos and images"

[[bin]]
name = "faceguard-desktop"
path = "src/main.rs"

[features]
static-ffmpeg = ["faceguard-core/static-ffmpeg"]

[dependencies]
faceguard-core = { workspace = true }
iced = { workspace = true }
iced_anim = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
crossbeam-channel = { workspace = true }
image = { workspace = true }
tempfile = { workspace = true }
ort = { workspace = true }
